--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /AGGP231Lab02fixed2/[Ll]ibrary/
+/231Lab03/[Ll]ibrary
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
